@@ -1,6 +1,7 @@
 #ifndef RMN_CALC_H
 #define RMN_CALC_H
 
+void RMN_bfr_init(char *str);
 int RMN_init(void);
 int RMN_verify_string(char *str);
 void RMN_encode_int(int n, char *str);
